--- a/.github/workflows/pull-request-path.yml
+++ b/.github/workflows/pull-request-path.yml
@@ -10,11 +10,15 @@ defaults:
 on:
   push:
     branches:
-      - '*'              # matches every branch that doesn't contain a '/'
-      - '*/*'            # matches every branch containing a single '/'
-      - '**'             # matches every branch
-      - '!main'          # reverse match main
-      - '!dependabot/**' # reverse match dependabot PRs
+      - 'UML-2560**'
+#      - '*'              # matches every branch that doesn't contain a '/'
+#      - '*/*'            # matches every branch containing a single '/'
+#      - '**'             # matches every branch
+#      - '!main'          # reverse match main
+#      - '!dependabot/**' # reverse match dependabot PRs
+
+
+# Base permissions are better
 
 permissions:
   contents: write
@@ -29,18 +33,34 @@ permissions:
   statuses: none
 
 jobs:
-  branch_name:
-    uses: ministryofjustice/opg-github-workflows/.github/workflows/data-parse-branch-name.yml@2d85e0b1b1b84ca98b6ec27d251d8e6319c95df9 # pin@v1.8.0
+  workflow_variables:
+    runs-on: ubuntu-latest
+    name: Extract branch name
+    outputs:
+      raw_branch: ${{ steps.extract_branch.outputs.branch_raw }}
+      parsed_branch: ${{ steps.extract_branch.outputs.branch_formatted }}
+      short_sha:  ${{ steps.sha.outputs.short_sha }}
+    steps:
+      - name: Extract branch
+        shell: bash
+        run: |
+          echo "##[set-output name=branch_raw;]$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF##*/}})"
+          echo "##[set-output name=branch_formatted;]$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF##*/}} | tr -cd '[:alnum:]' | tr '[:upper:]' '[:lower:]')"
+        id: extract_branch
+      - name: Extract short sha
+        shell: bash
+        run: |
+          echo "##[set-output name=short_sha;]$(echo ${GITHUB_SHA:0:7})"
+        id: sha
 
   terraform_lint:
     name: lint terraform code
     uses: ./.github/workflows/_lint-terraform.yml
     needs:
-      - branch_name
+      - workflow_variables
     with:
-      tag: ${{ needs.branch_name.outputs.parsed }}-${{ github.sha }}
-      branch_name: ${{ needs.branch_name.outputs.parsed }}
-      push_to_ecr: false
+      workspace: ${{ needs.workflow_variables.outputs.parsed_branch }}
+    secrets: inherit
 
   node_test:
     if: github.actor != 'dependabot[bot]'
@@ -56,13 +76,13 @@ jobs:
     name: build, test, scan and push
     uses: ./.github/workflows/_build-and-push.yml
     needs:
-      - branch_name
+      - workflow_variables
       - node_test
       - node_build
     with:
-      tag: ${{ needs.branch_name.outputs.parsed }}-${{ github.sha }}
-      branch_name: ${{ needs.branch_name.outputs.parsed }}
-      push_to_ecr: false
+      tag: ${{ needs.workflow_variables.outputs.parsed_branch }}-${{ needs.workflow_variables.outputs.short_sha }}
+      branch_name: ${{ needs.workflow_variables.outputs.parsed_branch }}
+      push_to_ecr: true
     secrets: inherit
 
   terraform_plan_shared_development:
@@ -81,16 +101,16 @@ jobs:
     needs:
       - docker_build_scan_push
       - terraform_lint
-      - branch_name
+      - workflow_variables
     with:
-      workspace: ${{ needs.branch_name.outputs.parsed }}-${{ github.sha }}
+      workspace: ${{ needs.workflow_variables.outputs.parsed_branch }}
       terraform_path: environment
-      container_version: ${{ needs.branch_name.outputs.parsed }}-${{ github.sha }}
+      container_version: ${{ needs.workflow_variables.outputs.parsed_branch }}-${{ needs.workflow_variables.outputs.short_sha }}
       apply: true
     secrets: inherit
 
   seed_dynamodb:
-    name: terraform apply environment
+    name: seed dynamodb
     uses: ./.github/workflows/_seed-database.yml
     needs:
       - terraform_apply_environment
@@ -101,9 +121,9 @@ jobs:
     uses: ./.github/workflows/_run-behat-tests.yml
     needs:
       - seed_dynamodb
-      - branch_name
+      - workflow_variables
     with:
-      workspace: ${{ needs.branch_name.outputs.parsed }}-${{ github.sha }}
+      workspace: ${{ needs.workflow_variables.outputs.parsed_branch }}
     secrets: inherit
 
   python_templated_slack_notify:
@@ -113,8 +133,8 @@ jobs:
       - run_behat_suite
     with:
       template: successful_dev_build.txt
-      webhook: DUMMY_VALUE
-    secrets: inherit
+    secrets:
+      webhook: ${{ secrets.DEV_SLACK_WEB_HOOK }}
 
   code_coverage:
     name: upload to code coverage
@@ -122,8 +142,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # pin@v3
-      - name: Restore the tests
-        run: echo "Restoring the tests"
       - name: get and validate codecov app
         run: bash ./scripts/pipeline/codecov_uploader/validate_codecov_uploader.sh
       - name: download artifact for front tests
@@ -136,21 +154,19 @@ jobs:
         with:
           name: service-api
           path: service-api
-      - name: check paths
-        run: |
-          ls -alt
-          ls -alt service-api
-          ls -alt service-front
       - name: upload to codecov
+        env:
+          CC_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         run: |
-          echo "would run normally"
-          # bash ~/project/codecov -t ${{ secrets.CODECOV_TOKEN }} || echo 'Codecov upload failed'
+          bash codecov -t ${CC_TOKEN} || echo 'Codecov upload failed'
 
   # Required end of workflow job
-#  workflow_end:
-#    name: End of workflow
-#    runs-on: ubuntu-latest
-#    needs: ['code_coverage']
-#    steps:
-#      - name: ending workflow
-#        run: echo "Ending Workflow"
+  workflow_end:
+    name: End of workflow
+    runs-on: ubuntu-latest
+    needs:
+      - code_coverage
+      - python_templated_slack_notify
+    steps:
+      - name: ending workflow
+        run: echo "Workflow has finished without any issues"
