--- a/.github/workflows/_lint-terraform.yml
+++ b/.github/workflows/_lint-terraform.yml
@@ -23,13 +23,30 @@ jobs:
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # pin@v3
 
-      - name: terraform fmt {{ matrix.folder }} check
+      - uses: hashicorp/setup-terraform@17d4c9b8043b238f6f35641cdd8433da1e6f3867 # pin@v2.0.0
+        with:
+          terraform_version: 1.2.4
+
+      - name: configure AWS credentials for terraform
+        uses: aws-actions/configure-aws-credentials@67fbcbb121271f7775d2e7715933280b06314838 # pin@v1.7.0
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_ACTIONS }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ACTIONS }}
+          aws-region: eu-west-1
+          role-duration-seconds: 1800
+          role-session-name: OPGUseAnLPAECRGithubAction
+
+      - uses: webfactory/ssh-agent@fc49353b67b2b7c1e0e6a600572d01a69f2672dd # pin@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.USE_AN_LPA_DEPLOY_KEY_PRIVATE_KEY }}
+
+      - name: terraform fmt ${{ matrix.folder }} check
         run: terraform fmt -check -recursive
         working-directory: ./terraform/${{ matrix.folder }}
 
-      - name: terraform validate {{ inputs.workspace }}
+      - name: terraform validate ${{ inputs.workspace }}
         env:
-          TF_WORKSPACE: ${{ matrix.folder }}
+          TF_WORKSPACE: default
         run: |
           terraform --version
           terraform init
