--- a/.github/workflows/_node-build.yml
+++ b/.github/workflows/_node-build.yml
@@ -38,5 +38,4 @@ jobs:
         uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8 # pin@v3.1.0
         with:
           name: dist-web
-          path: |
-            service-front/web/dist/
+          path: service-front/web/dist/
