--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,18 +9,8 @@ updates:
       time: "09:00"
       timezone: "Europe/London"
     ignore:
-      update-types: ["version-update:semver-patch"]
-    versioning-strategy: lockfile-only
-
-  # Enable version updates for service-pdf npm
-  - package-ecosystem: "npm"
-    directory: "/service-pdf/app"
-    schedule:
-      interval: "daily"
-      time: "09:00"
-      timezone: "Europe/London"
-    ignore:
-      update-types: ["version-update:semver-patch"]
+      - dependency-name: "*"
+        update-types: ["version-update:semver-patch"]
     versioning-strategy: lockfile-only
 
   # Enable version updates for service-front composer
@@ -31,7 +21,10 @@ updates:
       time: "09:00"
       timezone: "Europe/London"
     ignore:
-      update-types: ["version-update:semver-patch"]
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
+      - dependency-name: "aws/aws-sdk-php"
+        update-types: [ "version-update:semver-minor" ]
     versioning-strategy: lockfile-only
 
   # Enable version updates for service-api composer
@@ -42,7 +35,10 @@ updates:
       time: "09:00"
       timezone: "Europe/London"
     ignore:
-      update-types: ["version-update:semver-patch"]
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
+      - dependency-name: "aws/aws-sdk-php"
+        update-types: [ "version-update:semver-minor" ]
     versioning-strategy: lockfile-only
 
     # Enable version updates for smoke tests composer
@@ -53,7 +49,8 @@ updates:
       time: "09:00"
       timezone: "Europe/London"
     ignore:
-      update-types: ["version-update:semver-patch"]
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
     versioning-strategy: lockfile-only
 
     # Enable version updates for account terraform
@@ -64,7 +61,8 @@ updates:
       time: "09:00"
       timezone: "Europe/London"
     ignore:
-      update-types: ["version-update:semver-patch"]
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
 
     # Enable version updates for environment terraform
   - package-ecosystem: "terraform"
@@ -74,7 +72,8 @@ updates:
       time: "09:00"
       timezone: "Europe/London"
     ignore:
-      update-types: ["version-update:semver-patch"]
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
 
     # Enable version updates for service-admin gomod
   - package-ecosystem: "gomod"
@@ -84,7 +83,8 @@ updates:
       time: "09:00"
       timezone: "Europe/London"
     ignore:
-      update-types: ["version-update:semver-patch"]
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
 
     # Enable version updates for service-admin docker
   - package-ecosystem: "docker"
@@ -94,4 +94,5 @@ updates:
       time: "09:00"
       timezone: "Europe/London"
     ignore:
-      update-types: ["version-update:semver-patch"]
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
