--- a/service-front/app/composer.json
+++ b/service-front/app/composer.json
@@ -31,18 +31,20 @@
         "forum": "https://discourse.zendframework.com/c/questions/expressive"
     },
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "ext-apcu": "*",
-        "ext-redis": "*",
         "ext-intl": "*",
         "ext-json": "*",
+        "ext-redis": "*",
         "aws/aws-sdk-php": "^3.208.9",
+        "blazon/psr11-monolog": "^4.0",
         "cooperaj/better-twig-i18n": "^1.1",
         "dflydev/fig-cookies": "^3.0",
         "elie29/zend-phpdi-config": "^8.0",
-        "laminas/laminas-cache": "^2.12.0",
-        "laminas/laminas-cache-storage-adapter-apcu": "^1.0",
-        "laminas/laminas-cache-storage-adapter-redis": "^1.0",
+        "laminas/laminas-cache": "^3.6",
+        "laminas/laminas-cache-storage-adapter-apcu": "^2.2",
+        "laminas/laminas-cache-storage-adapter-memory": "^2.1",
+        "laminas/laminas-cache-storage-adapter-redis": "^2.3",
         "laminas/laminas-component-installer": "^2.1.1",
         "laminas/laminas-config-aggregator": "^1.0",
         "laminas/laminas-crypt": "^3.3",
@@ -59,16 +61,15 @@
         "mezzio/mezzio-session": "^1.3",
         "mezzio/mezzio-twigrenderer": "^2.3",
         "nesbot/carbon": "^2.56.0",
-        "paragonie/halite": "^4.5",
-        "php-http/guzzle6-adapter": "^2.0",
-        "blazon/psr11-monolog": "^4.0"
+        "paragonie/halite": "^5.0",
+        "php-http/guzzle6-adapter": "^2.0"
     },
     "require-dev": {
         "behat/behat": "^3.6",
         "cooperaj/behat-psr-extension": "^2.0",
         "filp/whoops": "^2.1.12",
         "laminas/laminas-development-mode": "^3.1",
-        "mezzio/mezzio-tooling": "^1.0",
+        "mezzio/mezzio-tooling": "^2.0",
         "mikey179/vfsstream": "^1.6",
         "phpspec/prophecy": "^1.15",
         "phpspec/prophecy-phpunit": "^2.0",
@@ -126,7 +127,7 @@
         "clear-config-cache": "php bin/clear-config-cache.php",
         "dc": [
             "Composer\\Config::disableProcessTimeout",
-            "docker-compose -f ../../docker-compose.yml -f ../../docker-compose.dependencies.yml"
+            "docker-compose -f ../../docker-compose.yml -f ../../docker-compose.dependencies.yml -f ../../docker-compose.override.yml"
         ],
         "dc-run": "@dc run --rm actor-app",
         "dc-php": "@dc-run php",
