--- a/service-front/web/package.json
+++ b/service-front/web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web",
   "version": "1.0.0",
+  "type": "module",
   "description": "Web components for the use lpa service",
   "main": "index.js",
   "repository": "git@github.com:ministryofjustice/opg-use-an-lpa.git",
@@ -10,45 +11,35 @@
     "build:pdf": "webpack --progress --config webpack.pdf.development.js",
     "build:pdf_production": "npm run build-scss && webpack --progress --config webpack.pdf.production.js",
     "build": "npm run build-scss && webpack --progress --config webpack.production.js",
+    "esbuild": "npm run build-scss && node build.js && babel dist/index.js -o dist/indexES5.js",
     "watch": "webpack --progress --watch --config webpack.development.js",
     "accessibility-check": "node ./pa11y.js",
-    "build-scss": "npm rebuild node-sass && node-sass --omit-source-map-url src/gds.scss dist/stylesheets/gds.css"
+    "build-scss": "npm rebuild node-sass && node-sass --omit-source-map-url src/gds.scss dist/stylesheets/gds.css && node-sass --omit-source-map-url src/stylesheets/lpa.scss dist/stylesheets/lpa.css"
   },
   "author": "John Nolan <john.nolan@digital.justice.gov.uk>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.3",
     "@babel/plugin-transform-member-expression-literals": "^7.18.6",
     "@babel/plugin-transform-property-literals": "^7.18.6",
     "@babel/plugin-transform-reserved-words": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.19.3",
-    "@babel/runtime-corejs3": "^7.19.1",
     "@testing-library/dom": "^8.18.1",
     "@testing-library/jest-dom": "^5.16.4",
-    "babel-jest": "^27.5.1",
-    "babel-loader": "^8.2.5",
-    "base64-inline-loader": "^2.0.1",
-    "copy-webpack-plugin": "^9.1.0",
-    "core-js": "^3.25.5",
     "coveralls": "^3.1.1",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^3.4.1",
     "es6-promise": "^4.2.8",
+    "esbuild": "^0.15.10",
+    "esbuild-sass-plugin": "^2.3.3",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^27.5.1",
     "jest-junit": "^13.2.0",
-    "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.3",
     "prettier": "^2.7.1",
-    "sass": "^1.55.0",
-    "sass-loader": "^12.6.0",
-    "terser-webpack-plugin": "^5.3.3",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-merge": "^5.8.0"
+    "sass": "^1.55.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.18.6",
